--- a/website-source/shared/css/brand.css
+++ b/website-source/shared/css/brand.css
@@ -235,6 +235,11 @@ a[target="_blank"]::after {
     right: -15px; */
 }
 
+.rs-instruction {
+    color: var(--rs-colour-pink);
+    /* font-weight: bold; */
+}
+
 /*
 .##.....##.########.####.##.......####.########.####.########..######.
 .##.....##....##.....##..##........##.....##.....##..##.......##....##
@@ -599,7 +604,7 @@ nav>ul.rs-nav-sub>li>a::after {
         gap: var(--space-2xs);
         /* justify-content: space-between; */
         margin-block-start: var(--space-m);
-        margin-block-end: var(--space-xl);
+        margin-block-end: var(--space-l);
     }
 
     h1 {
@@ -771,6 +776,12 @@ a[href="#bio"]:hover>span>img {
     a[href="#bio"]:hover>span>img {
         transform: rotate(-45deg) translate(30%, 10%);
     }
+}
+
+.rs-img-hero {
+    width: 100%;
+    height: auto;
+    margin: 0 auto var(--space-xl) auto;
 }
 
 /*
