--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -146,6 +146,7 @@ jsFiles: []
                 {% include "../../website-source/_shared/images/footer/footer-cat.svg" %}
 
                 <div class="rs-column-wide">
+                    <p>CONTACT DETAILS</p>
                     <nav>
                         <ul class="rs-switcher rs-nav-sub">
                             {% for item in navigationFooter %}
