--- a/website-source/_shared/css/brand.css
+++ b/website-source/_shared/css/brand.css
@@ -63,7 +63,7 @@
 
     --rs-colour-footer-bg: var(--rs-colour-ec-dark-blue);
 
-    --rs-colour-pink-values: 334, 78%, 50%;
+    --rs-colour-pink-values: 330 100% 71%;
     --rs-colour-red-values: 0 100% 69%;
     --rs-colour-green-values: 145 100% 41%;
     --rs-colour-yellow-values: 51 100% 50%;
@@ -126,6 +126,7 @@ body {
     scrollbar-width: auto;
     width: 100%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -239,10 +240,15 @@ a[target="_blank"]::after {
 }
 
 .rs-instruction {
-    color: var(--rs-colour-pink);
+    background-color: var(--rs-highlight-current);
+    color: var(--rs-colour-ec-dark-blue);
+    width: fit-content;
+    margin-inline: auto;
+    padding: var(--space-3xs) var(--space-2xs);
     text-align: center;
     font-size: var(--font-size--1);
     font-weight: 400;
+    line-height: 1.2;
 }
 
 /*
@@ -483,30 +489,6 @@ nav>ul>li>a[href^="/code/"]:hover {
     background-color: hsl(var(--rs-colour-green-values) / 0.3);
 }
 
-/* nav>ul>li>a:hover {
-    background-color: var(--rs-colour-nav-link-bg-hover);
-} */
-
-/* nav>ul>li.is-active>a {
-    background-color: var(--rs-colour-nav-link-active-bg);
-} */
-
-/* nav>ul>li.is-active>a::after {
-    content: "";
-    width: calc(var(--space-3xs) - 1px);
-    height: calc(var(--space-3xs) - 1px);
-    bottom: calc(var(--space-3xs) - 3px);
-
-    width: var(--space-2xs);
-    height: var(--space-2xs);
-    bottom: 0;
-    border-radius: 50%;
-    background-color: hsl(var(--rs-highlight-current-values) / 1);
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 100%);
-} */
-
 nav>ul>li>p {
     position: absolute;
     bottom: calc((var(--font-size--1) + var(--space-2xs) * 2) * -1);
@@ -534,7 +516,6 @@ nav>ul.rs-nav-sub {
 nav>ul.rs-nav-sub>li>a {
     width: 100%;
     text-align: center;
-    /* border-block-end-color: var(--rs-colour-light-blue); */
     border-block-end: 0;
     color: var(--rs-colour-light-blue);
     background-color: rgba(255, 255, 255, 0.1);
@@ -557,6 +538,47 @@ nav>ul.rs-nav-sub>li>a>svg {
 
 nav>ul.rs-nav-sub>li>a::after {
     display: none;
+}
+
+.rs-nav-skip-to-code {
+    --rs-arrow-height: 10px;
+    text-align: center;
+
+    >a {
+        position: relative;
+        color: var(--rs-colour-ec-light-blue);
+        border: 1px solid var(--rs-colour-ec-light-blue);
+        padding-block: var(--space-3xs);
+        text-decoration: none;
+        margin: 0 auto var(--space-2xs) auto;
+        display: inline-block;
+        padding-inline: var(--space-2xs);
+        font-size: var(--font-size--2);
+    }
+
+    >a:hover {
+        /* text-decoration: underline; */
+    }
+
+    >a::before,
+    >a::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 100%);
+        display: block;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: var(--rs-arrow-height) var(--rs-arrow-height) 0 var(--rs-arrow-height);
+        border-color: var(--rs-colour-ec-light-blue) transparent transparent transparent;
+    }
+
+    >a::after {
+        bottom: 1px;
+        border-color: white transparent transparent transparent;
+    }
 }
 
 /*
@@ -680,7 +702,7 @@ nav>ul.rs-nav-sub>li>a::after {
             background-color: var(--rs-colour-ec-light-blue);
             color: white;
             font-weight: bold;
-            padding-inline: var(--space-2xs);
+            padding: var(--space-3xs) var(--space-2xs);
             transition: background-color 0.3s ease-out;
             /* clip-path: polygon(var(--rs-tag-inset) 0, 100% 0, calc(100% - var(--rs-tag-inset) 100%), 0 100%) */
             clip-path: polygon(var(--rs-tag-inset) 0%, 100% 0%, calc(100% - var(--rs-tag-inset)) 100%, 0% 100%);
