--- a/website-source/_shared/css/brand.css
+++ b/website-source/_shared/css/brand.css
@@ -554,11 +554,11 @@ nav>ul.rs-nav-sub>li>a::after {
         display: inline-block;
         padding-inline: var(--space-2xs);
         font-size: var(--font-size--2);
+        box-shadow: 0;
+        transition: var(--rs-transition-short);
     }
 
-    >a:hover {
-        /* text-decoration: underline; */
-    }
+
 
     >a::before,
     >a::after {
@@ -573,11 +573,20 @@ nav>ul.rs-nav-sub>li>a::after {
         border-style: solid;
         border-width: var(--rs-arrow-height) var(--rs-arrow-height) 0 var(--rs-arrow-height);
         border-color: var(--rs-colour-ec-light-blue) transparent transparent transparent;
+        transition: var(--rs-transition-short);
     }
 
     >a::after {
         bottom: 1px;
         border-color: white transparent transparent transparent;
+    }
+
+    >a:hover {
+        box-shadow: 0px 3px 0px 0px var(--rs-colour-ec-light-blue);
+    }
+
+    >a:hover::before {
+        bottom: -4px;
     }
 }
 
